[gd_scene load_steps=2 format=3 uid="uid://ca2tqfxsjmhj1"]

[ext_resource type="Script" path="res://menus/pause_menu.gd" id="1_a48ly"]

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a48ly")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 2
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.352941)

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -28.0
offset_right = 4.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2

[node name="Continue" type="Button" parent="Menu"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
text = "Continue
"

[node name="Save" type="Button" parent="Menu"]
layout_mode = 2
text = "Save Game"

[node name="Load" type="Button" parent="Menu"]
layout_mode = 2
text = "Load Game"

[node name="Menu" type="Button" parent="Menu"]
layout_mode = 2
text = "Main Menu"

[node name="Quit" type="Button" parent="Menu"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Continue")
text = "Quit Game"

[connection signal="pressed" from="Menu/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Menu/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Menu/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Menu/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Menu/Quit" to="." method="_on_quit_pressed"]
